Set up boilerplate, AdvantageKit, Arm example code, auto-formatting

--- a/.gitignore
+++ b/.gitignore
@@ -172,6 +172,7 @@ out/
 networktables.json
 simgui.json
 *-window.json
+simgui-ds.json
 
 # Simulation data log directory
 logs/
@@ -186,4 +187,9 @@ compile_commands.json
 # Eclipse generated file for annotation processors
 .factorypath
 
+# Version file
+src/main/java/frc/robot/BuildConstants.java
+
+# Instructions for Claude Code
 CLAUDE.md
+
