--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "java.configuration.updateBuildConfiguration": "automatic",
+  "java.configuration.updateBuildConfiguration": "disabled",
   "java.server.launchMode": "Standard",
   "files.exclude": {
     "**/.git": true,
@@ -26,7 +26,7 @@
     },
   ],
   "java.test.defaultConfig": "WPIlibUnitTests",
-  "java.import.gradle.annotationProcessing.enabled": true,
+  "java.import.gradle.annotationProcessing.enabled": false,
   "java.completion.favoriteStaticMembers": [
     "org.junit.Assert.*",
     "org.junit.Assume.*",
@@ -58,4 +58,8 @@
     "edu.wpi.first.math.**.struct.*",
   ],
   "wpilib.skipSelectSimulateExtension": true,
+  "java.project.referencedLibraries": [
+    "build/generated/sources/annotationProcessor/java/main/**/*.java"
+  ],
+  "java.project.sourcePaths": ["src/main/java"],  // Remove generated paths
 }
