--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,14 @@ plugins {
     id "com.diffplug.spotless" version "6.12.0"
 }
 
+sourceSets {
+    main {
+        java {
+            srcDir 'build/generated/sources/annotationProcessor/java/main'
+        }
+    }
+}
+
 java {
     sourceCompatibility = JavaVersion.VERSION_17
     targetCompatibility = JavaVersion.VERSION_17
