Added elevator visualization, simple testing harness

--- a/custom_assets/Robot_Varsam/config.json
+++ b/custom_assets/Robot_Varsam/config.json
@@ -8,7 +8,11 @@
     "components": [
         {
             "zeroedRotations":[],
-            "zeroedPosition":[0,0,0]
+            "zeroedPosition":[0,0.0635,0.1]
+        },
+        {
+            "zeroedRotations":[],
+            "zeroedPosition":[0,0.0635,0.13]
         }
     ]
 }
