--- a/.gitignore
+++ b/.gitignore
@@ -176,6 +176,7 @@ simgui-ds.json
 
 # Simulation data log directory
 logs/
+real_logs/
 
 # Folder that has CTRE Phoenix Sim device config storage
 ctre_sim/
